2009-11-10  Andras Becsi  <becsi.andras@stud.u-szeged.hu>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Update outdated metrics in these tests after r50665 enabled the previously missing scrollbar.
        This fixes https://bugs.webkit.org/show_bug.cgi?id=31281.

        * platform/qt/css1/basic/class_as_selector-expected.txt:
        * platform/qt/css1/basic/comments-expected.txt:
        * platform/qt/css1/basic/containment-expected.txt:
        * platform/qt/css1/basic/id_as_selector-expected.txt:
        * platform/qt/css1/basic/inheritance-expected.txt:
        * platform/qt/css1/box_properties/border-expected.txt:
        * platform/qt/css1/box_properties/border_bottom-expected.txt:
        * platform/qt/css1/box_properties/border_bottom_width-expected.txt:
        * platform/qt/css1/box_properties/border_left-expected.txt:
        * platform/qt/css1/box_properties/border_left_width-expected.txt:
        * platform/qt/css1/box_properties/border_right_inline-expected.txt:
        * platform/qt/css1/box_properties/border_right_width-expected.txt:
        * platform/qt/css1/box_properties/border_style-expected.txt:
        * platform/qt/css1/box_properties/border_top-expected.txt:
        * platform/qt/css1/box_properties/border_top_width-expected.txt:
        * platform/qt/css1/box_properties/border_width-expected.txt:
        * platform/qt/css1/box_properties/clear-expected.txt:
        * platform/qt/css1/box_properties/clear_float-expected.txt:
        * platform/qt/css1/box_properties/float_elements_in_series-expected.txt:
        * platform/qt/css1/box_properties/float_margin-expected.txt:
        * platform/qt/css1/box_properties/float_on_text_elements-expected.txt:
        * platform/qt/css1/box_properties/height-expected.txt:
        * platform/qt/css1/box_properties/margin-expected.txt:
        * platform/qt/css1/box_properties/margin_bottom-expected.txt:
        * platform/qt/css1/box_properties/margin_inline-expected.txt: